--- a/style.css
+++ b/style.css
@@ -54,12 +54,43 @@ h1{
     justify-content: center;
     align-items: center;
 }
+
 .header-content .header-text .all-text .btn{
     padding: 10px 40px;
     background-color: #E02C6D;
     color: #ffffff;
     border: none;
     border-radius: 50px;
+    /* transform: translateX(-50%); */
+}
+.header-content:hover .header-text .all-text .btn{
+    transform: rotate(360deg);
+    transition: 1s;
+    animation: animate 3s linear;
+}
+
+@keyframes animate {
+    0%{
+        transform: translateY(0);
+        transform: translateX(50px);
+    }            
+    25%{
+        transform: translateY(-150px);
+        transform: translateX(0px);
+    }
+    50%{
+        transform: translateY(200px);
+        transform: translateX(150px);
+    }
+    75%{
+        transform: translateX(-150px);
+        transform: translateY(-150px);
+    }
+    100%{
+        transform: translateY(0);
+        transform: translateX(0);
+
+    }
 }
 
 .header-content .header-text .all-text .header-title, .header-paragraph{
@@ -68,17 +99,145 @@ h1{
 
 /* main section code here  */
 main{
-    width: 70%;
     margin: auto;
 }
 
 .multi-vendor{
+    width: 70%;
+    margin: auto;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
 }
 
+/* card section start here  */
+.product-card{
+    margin: 0 150px;
+    padding: 50px 0;
+}
+.cards{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 50px;
+}
+.card{
+    padding: 10px;
+    margin: 15px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 20px gray;
+}
+.cards .card .card-image img{
+    height: 256px;
+    width: 300px;
+    margin: auto;
+}
+.card .card-content h3, span, h4, p{
+    margin-top: 15px;
+}
+
+.card .card-content .star-icon{
+    margin-right: 15px;
+}
+.card .card-content .star-icon i{
+    font-size: 16px;
+    color: orange;
+}
+.product-card .explore-more{
+    display: flex;
+    justify-content: right;
+}
+.product-card .explore-more .see-more{
+    color: #E02C6D;
+    text-decoration: none;
+}
+
+@media (max-width: 480px) {
+    h1{
+        font-size: 30px;
+    }
+    .influencer-header{
+        width: 90%;
+        margin: auto;
+    }
+    .influencer-menu .logo h2{
+        text-align: center;
+    }
+    .influencer-menu .menu{
+        display: none;
+    }
+    .header-content{
+        display: block;
+    }
+    .header-content .header-text .all-text .header-title, .header-paragraph{
+        text-align: center;
+    }
+    .header-content .header-text .all-text .btn{
+        display: flex;
+        justify-content: center;
+        /* align-items: center; */
+        margin: auto;
+    }
+
+    .header-content .header-image img{
+        height: 257px;
+        width: 257px;
+    }
+
+    main .multi-vendor{
+        display: none;
+    }
 
 
+    .product-card{
+        margin: 0;
+        padding: 50px 0;
+    }
+    .cards{
+        grid-template-columns: 250px;
+    }
+    .cards .card .card-image img{
+        width: 200px;
+        height: 176px;
+        margin: auto;
+    }
+
+    .footer-menu-content{
+        width: 90%;
+        margin: auto;
+        display: grid;
+        grid-template-columns: 200px;
+    }
+
+    footer{
+        display: none;
+    }
+
+}
+
+/* footer-menu code start here  */
+.footer-menu{
+    background-color: #445268;
+    padding: 50px 0;
+}
+
+.footer-menu-content{
+    width: 80%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.footer-menu-content h3{
+    color: #ffffff;
+    padding-bottom: 20px;
+}
+.footer-menu-content ul li{
+    list-style: none;
+}
+
+.footer-menu-content ul li a{
+    text-decoration: none;
+    color: orange;
+}
 
 /* footer code start here */
 .influencer-footer{
